Use springboot autoconf to start api v0 Use modules Use nullable annotations Clean loading of test primitive classes in gui/webapp